<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mfg="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_Navigation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_helper">

    <ImageView android:id="@+id/iv_menu"
        android:layout_width="48dp"
      	android:layout_height="48dp"
      	android:layout_centerVertical="true"
      	android:layout_centerHorizontal="true"
      	android:padding="5dp"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:src="@drawable/menu"
        android:clickable="true"
        android:onClick="showPopup" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true">
        <com.megaflashgames.moneynotebook.ui.view.FTextView
            android:id="@+id/tv_add_car_cost"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            mfg:font="@string/font_icons"
            android:text="@string/icon_plus"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>

        <com.megaflashgames.moneynotebook.ui.view.FTextView
            android:id="@+id/tv_rearrange"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            mfg:font="@string/font_icons"
            android:text="@string/icon_rearrange"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>
    </LinearLayout>

</RelativeLayout>